# fao-wetl-pywapor

./: .gitignore  README.md  build_docs.sh  merge_conda.sh  pyproject.toml  release_conda.sh  release_pip.sh  setup.py  tag_release.sh
.github/utility/create_issue/: action.yml
.github/workflows/: copy.yml  publish.yml
docs/: conf.py
docs/_build/doctrees/: _etlook.doctree  _pywapor_api.doctree  _user_guide.doctree  bibliography.doctree  data_sources.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  _etlook.html  _pywapor_api.html  _user_guide.html  bibliography.html  data_sources.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pywapor/: __init__.py  et_look.py  main.py  pre_et_look.py
pywapor/collect/: accounts.py  downloader.py
pywapor/collect/product/: CHIRPS.py  COPERNICUS.py  ERA5.py  GEOS5.py  GLOBCOVER.py  LANDSAT.py  LSASAF.py  MERRA2.py  MODIS.py  MODIS_cloud.py  SENTINEL2.py  SENTINEL3.py  SRTM.py  STATICS.py  TERRA.py  VIIRSL1.py
pywapor/collect/protocol/: appeears.py  cds.py  cmr.py  cog.py  copernicus_odata.py  crawler.py  opendap.py
pywapor/configs/: WaPOR3_level_3.json  all_in.json  nrt.json
pywapor/enhancers/: dem.py  temperature.py
pywapor/enhancers/smooth/: core.py  whittaker.py
pywapor/et_look_v2_v3/: biomass.py  meteo.py  radiation.py  solar_radiation.py
pywapor/general/: aligner.py  compositer.py  performance.py  processing_functions.py  reproject.py  variables.py
tests/: colab_notebook_tests.ipynb  collect_test.py  conftest.py  main_test.py
(+131 files in other folders)
